# AIFileDisco

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  aifiles.config.example.json  aifiles.py  central.py  generate_test_data.py  install.sh  pyproject.toml  server.py
test_data/: .gitignore
test_data/agentic/autogen/: OAI_CONFIG_LIST
test_data/agentic/crewai/: crew.py
test_data/agentic/dspy/: retriever.py
test_data/agentic/langgraph/: workflow.py
test_data/agentic/mlflow/: MLmodel
test_data/agents/: SKILL.md  agent_config.yaml  data_analyst.skill  goals.yaml  persona.txt  scraper_plugin.json  search_agent.yaml  system_prompt.md
test_data/configs/: diffusion_train.yaml  lora_finetune.yml  prompt_template.prompt  training_bert.yaml
test_data/data/raw/: notes.txt
test_data/datasets/annotations/: bio_tags.bio  entities.ann  ner_labels.conll
test_data/datasets/cached/: features.feather  tokenized_dataset.arrow
test_data/datasets/embeddings/: train_embeddings.parquet  val_embeddings.parquet
test_data/datasets/features/: cached_embeds.npz  labels.npy  (+1 more)
test_data/docs/: README.md  dataset_description.tex  eval_report.html  model_card.md  paper_notes.rst  training_guide.md
test_data/infra/: k8s-deploy.yml
test_data/media/: next_gen.avif  photo.heic  presentation.mov  training_clip.webm
test_data/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  analysis.rmd  helpers.R  report.qmd  utils_demo.ipynb
test_data/scripts/: evaluate.sh
test_data/secrets/: .env  credentials.json  id_rsa
test_data/src/: dataset.py  inference.rs  model.py  pipeline.jl  preprocess.js  requirements.txt  train.py
tests/: test_aifiles.py
(+93 files in other folders)
