[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifilefinder"
version = "1.0.0"
description = "AI File Discovery — Find, classify, and monitor AI/ML files on disk"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "David Girard"},
]
keywords = ["ai", "ml", "file-scanner", "data-discovery", "model-discovery", "integrity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

# Zero external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
aifiles = "aifiles:main"
aifiles-server = "server:main"

[project.urls]
Homepage = "https://github.com/girdav01/AIFileDisco"
Issues = "https://github.com/girdav01/AIFileDisco/issues"

[tool.setuptools]
py-modules = ["aifiles", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
